--- a/style.css
+++ b/style.css
@@ -45,7 +45,14 @@ body{
     flex-basis: 20%;
     font-size: 24px;
     height: 65px;
+    transition: background 0.3s, color 0.3s;
+}.calc-button:hover{
+    opacity: 0.5
+}.calc-button:active{
+    transform: scale(0.85);
+    filter: brightness(3);
 }
+
 .ac{
     flex-basis: 47%;
 }
